# PROJEKAT_IS_Prepoznavanje_pospanosti_vozaca_u_realnom_vremenu

./: .gitignore  01_podaci.py  02_trening.py  03_testiranje.py  04_epohe.py  05_cuvanje_modela.py  06_realtime.py  README.md  data.yaml  dataset_split_info.txt  deepseek_python_20260611_f9ba9a.py  inteligentni_finale.py  inteligentni_finale_original.py  pyproject.toml
